--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,16 @@
                 </li>
             </ul>
             <div class="buh__burger">
-                <span></span>
+                <input type="checkbox" id="buh__toggle">
+                <label for="buh__toggle" class="buh__burger_btn"><span></span></label>
+
+                <ul class="buh__box">
+                    <li><a href="#" class="buh__item">Главная</a></li>
+                    <li><a href="#" class="buh__item">Услуги</a></li>
+                    <li><a href="#" class="buh__item">Кейсы</a></li>
+                    <li><a href="#" class="buh__item">О компании</a></li>
+                    <li><a href="#" class="buh__item">Контакты</a></li>
+                </ul>
             </div>
         </nav>
     </div>
