--- a/src/index.html
+++ b/src/index.html
@@ -82,7 +82,7 @@
             <ul class="heading__arrow-circle">
                 <li class="heading__arrow-item"></li>
                 <li class="heading__arrow-item"></li>
-                <li class="heading__arrow-item heading__arrow-act"></li>
+                <li class="heading__arrow-item"></li>
                 <li class="heading__arrow-item"></li>
             </ul>
             <ul class="arrow">
@@ -102,17 +102,15 @@
         <h3>Наши услуги</h3>
         <h2>Мы специализируемся</h2>
         <ul class="services__items">
-            <li class="services__items-blue">
+            <li class="services__items-blck top">
                 <p>Бухгалтерское<br>обслуживание</p>
             </li>
-            <li class="services__items-blck">
+            <li class="services__items-blck top">
                 <p>Бухгалтерское<br>обслуживание</p>
             </li>
-            <li class="services__items-blck">
+            <li class="services__items-blck top">
                 <p>Бухгалтерское<br>обслуживание</p>
             </li>
-        </ul>
-        <ul class="services__items">
             <li class="services__items-blck">
                 <p>Бухгалтерское<br>обслуживание</p>
             </li>
@@ -123,6 +121,17 @@
                 <p>Бухгалтерское<br>обслуживание</p>
             </li>
         </ul>
+<!--        <ul class="services__items">-->
+<!--            <li class="services__items-blck">-->
+<!--                <p>Бухгалтерское<br>обслуживание</p>-->
+<!--            </li>-->
+<!--            <li class="services__items-blck">-->
+<!--                <p>Бухгалтерское<br>обслуживание</p>-->
+<!--            </li>-->
+<!--            <li class="services__items-blck">-->
+<!--                <p>Бухгалтерское<br>обслуживание</p>-->
+<!--            </li>-->
+<!--        </ul>-->
     </div>
 </section>
 
@@ -148,14 +157,14 @@
                     <p>Завершено
                         <br>крупных сделок
                     </p>
-                    <a href="#" target="_blank">Все кейсы</a>
+                    <a class="about-blue" href="#" target="_blank">Все кейсы</a>
                 </li>
                 <li class="about__items-grey">
                     <h2>90</h2>
                     <p>Завершено
                         <br>крупных сделок
                     </p>
-                    <a href="#" target="_blank">Все кейсы</a></li>
+                    <a class="about-blue" href="#" target="_blank">Все кейсы</a></li>
             </ul>
             <ul class="about__items">
                 <li class="about__items-grey">
@@ -163,14 +172,14 @@
                     <p>Завершено
                         <br>крупных сделок
                     </p>
-                    <a href="#" target="_blank">Все кейсы</a>
+                    <a class="about-blue" href="#" target="_blank">Все кейсы</a>
                 </li>
-                <li class="about__items-blue">
+                <li class="about__items-grey">
                     <h2>90</h2>
                     <p>Завершено
                         <br>крупных сделок
                     </p>
-                    <a href="#" target="_blank">Все кейсы</a>
+                    <a class="about-blue" href="#" target="_blank">Все кейсы</a>
                 </li>
             </ul>
         </div>
@@ -192,7 +201,7 @@
                 <ul class="client__mcr-circle">
                     <li class="client__mcr-item"></li>
                     <li class="client__mcr-item"></li>
-                    <li class="client__mcr-item client__mcr-act"></li>
+                    <li class="client__mcr-item"></li>
                     <li class="client__mcr-item"></li>
                 </ul>
                 <ul class="client__arrow">
@@ -229,7 +238,7 @@
             <ul class="feedback__line-circle">
                 <li class="feedback__line-item"></li>
                 <li class="feedback__line-item"></li>
-                <li class="feedback__line-item feedback__line-act"></li>
+                <li class="feedback__line-item"></li>
                 <li class="feedback__line-item"></li>
             </ul>
             <ul class="feedback__arrow">
