--- a/src/index.html
+++ b/src/index.html
@@ -101,9 +101,9 @@
     <div class="services__column container">
         <h3>Наши услуги</h3>
         <h2>Мы специализируемся</h2>
-        <ul class="services__items">
-            <li class="services__items-blck top">
-                <p>Бухгалтерское<br>обслуживание</p>
+        <ul class="services__items"> // services-items
+            <li class="services__items-blck top"> // service_items
+                <p>Бухгалтерское<br>обслуживание</p> // service_items__description
             </li>
             <li class="services__items-blck top">
                 <p>Бухгалтерское<br>обслуживание</p>
