--- a/src/index.html
+++ b/src/index.html
@@ -10,58 +10,62 @@
 </head>
 
 <body>
-<header class="buh">
-    <div class="container">
-        <nav>
-            <ul class="buh__info">
-                <li>
-                    <img src="img/mobile.png" alt="телефон">
-                    <a href="#" target="_blank">8 (111) 222-33-44</a>
-                </li>
-                <li>
-                    <img src="img/clock.png" alt="время работы">
-                    <a href="#" target="_blank">Пн-Пт 10:00-18:00</a>
-                </li>
-                <li>
-                    <img src="img/mail.png" alt="почта">
-                    <a href="#" target="_blank">order@buhone.ru</a>
-                </li>
-                <li>
-                    <img src="img/placeholder.png" alt="местоположение">
-                    <a href="#" target="_blank">Невский пр. 130</a>
-                </li>
-            </ul>
-            <a href="#" class="buh__logo">
-                <img src="img/logo.png" alt="логотип" class="buh__logo_label">
-                <img src="img/BuhOne.png" alt="название логотипа" class="buh__logo_text">
-            </a>
-            <ul class="buh__link">
-                <li>
-                    <a href="#" target="_blank">Главная</a>
-                </li>
-                <li>
-                    <a href="#" target="_blank">Услуги</a>
-                </li>
-                <li>
-                    <a href="#" target="_blank">Кейсы</a>
-                </li>
-                <li>
-                    <a href="#" target="_blank">О компании</a>
-                </li>
-                <li>
-                    <a href="#" target="_blank">Контакты</a>
-                </li>
-            </ul>
-            <div class="buh__burger">
-                <input type="checkbox" id="buh__toggle">
-                <label for="buh__toggle" class="buh__burger_btn"><span></span></label>
 
-                <ul class="buh__box">
-                    <li><a href="#" class="buh__item">Главная</a></li>
-                    <li><a href="#" class="buh__item">Услуги</a></li>
-                    <li><a href="#" class="buh__item">Кейсы</a></li>
-                    <li><a href="#" class="buh__item">О компании</a></li>
-                    <li><a href="#" class="buh__item">Контакты</a></li>
+<header class="buh header">
+    <div class="container">
+        <div class="logo">
+            <a href="#" class="buh__logo logo-link">
+                <img class="buh__logo_label logo-link__label" src="img/logo.png" alt="логотип">
+                <img class="buh__logo_text logo-link__text" src="img/BuhOne.png" alt="название логотипа">
+            </a>
+        </div>
+        <nav class="navigation">
+            <ul class="buh__info menu-top">
+                <li class="menu-top__item">
+                    <img class="menu-top__img" src="img/mobile.png" alt="телефон">
+                    <a class="menu-top__link" href="#" target="_blank">8 (111) 222-33-44</a>
+                </li>
+                <li class="menu-top__item">
+                    <img class="menu-top__img" src="img/clock.png" alt="время работы">
+                    <a class="menu-top__link" href="#" target="_blank">Пн-Пт 10:00-18:00</a>
+                </li>
+                <li class="menu-top__item">
+                    <img class="menu-top__img" src="img/mail.png" alt="почта">
+                    <a class="menu-top__link" href="#" target="_blank">order@buhone.ru</a>
+                </li>
+                <li class="menu-top__item">
+                    <img class="menu-top__img" src="img/placeholder.png" alt="местоположение">
+                    <a class="menu-top__link" href="#" target="_blank">Невский пр. 130</a>
+                </li>
+            </ul>
+            <ul class="buh__link menu-bottom">
+                <li class="menu-bottom__item">
+                    <a class="menu-bottom__link" href="#" target="_blank">Главная</a>
+                </li>
+                <li class="menu-bottom__item">
+                    <a class="menu-bottom__link" href="#" target="_blank">Услуги</a>
+                </li>
+                <li class="menu-bottom__item">
+                    <a class="menu-bottom__link" href="#" target="_blank">Кейсы</a>
+                </li>
+                <li class="menu-bottom__item">
+                    <a class="menu-bottom__link" href="#" target="_blank">О компании</a>
+                </li>
+                <li class="menu-bottom__item">
+                    <a class="menu-bottom__link" href="#" target="_blank">Контакты</a>
+                </li>
+            </ul>
+            <div class="buh__burger burger">
+                <input class=" input burger__input" type="checkbox" id="buh__toggle">
+                <label for="buh__toggle" class="buh__burger_btn button burger__button">
+                    <span class="хз как назвать"></span>
+                </label>
+                <ul class="buh__box box-burger">
+                    <li class="box-burger__item"><a href="#" class="buh__item box-burger__link">Главная</a></li>
+                    <li class="box-burger__item"><a href="#" class="buh__item box-burger__link">Услуги</a></li>
+                    <li class="box-burger__item"><a href="#" class="buh__item box-burger__link">Кейсы</a></li>
+                    <li class="box-burger__item"><a href="#" class="buh__item box-burger__link">О компании</a></li>
+                    <li class="box-burger__item"><a href="#" class="buh__item box-burger__link">Контакты</a></li>
                 </ul>
             </div>
         </nav>
