--- a/src/index.html
+++ b/src/index.html
@@ -13,14 +13,14 @@
 
 <header class="buh header">
     <div class="container">
-        <div class="logo">
+        <div class="logo header__logo">
             <a href="#" class="buh__logo logo-link">
                 <img class="buh__logo_label logo-link__label" src="img/logo.png" alt="логотип">
                 <img class="buh__logo_text logo-link__text" src="img/BuhOne.png" alt="название логотипа">
             </a>
         </div>
-        <nav class="navigation">
-            <ul class="buh__info menu-top">
+        <nav class="navigation header__navigation">
+            <ul class="buh__info navigation__menu-top">
                 <li class="menu-top__item">
                     <img class="menu-top__img" src="img/mobile.png" alt="телефон">
                     <a class="menu-top__link" href="#" target="_blank">8 (111) 222-33-44</a>
@@ -38,7 +38,7 @@
                     <a class="menu-top__link" href="#" target="_blank">Невский пр. 130</a>
                 </li>
             </ul>
-            <ul class="buh__link menu-bottom">
+            <ul class="buh__link navigation__menu-bottom">
                 <li class="menu-bottom__item">
                     <a class="menu-bottom__link" href="#" target="_blank">Главная</a>
                 </li>
@@ -55,10 +55,10 @@
                     <a class="menu-bottom__link" href="#" target="_blank">Контакты</a>
                 </li>
             </ul>
-            <div class="buh__burger burger">
-                <input class=" input burger__input" type="checkbox" id="buh__toggle">
+            <div class="buh__burger burger header__burger">
+                <input class="burger__input" type="checkbox" id="buh__toggle">
                 <label for="buh__toggle" class="buh__burger_btn button burger__button">
-                    <span class="хз как назвать"></span>
+                    <span class="burger__span"></span>
                 </label>
                 <ul class="buh__box box-burger">
                     <li class="box-burger__item"><a href="#" class="buh__item box-burger__link">Главная</a></li>
